design-complete desktop

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -24,8 +24,11 @@
   position: relative;
 }
 .nav-link:hover {
-  color: #000;
+  color: #000 !important;
   font-weight: 600;
+}
+.nav-link:focus {
+  color: #000 !important;
 }
 
 .nav-link::before {
