--- a/src/css/items.css
+++ b/src/css/items.css
@@ -1,9 +1,14 @@
+.items-div {
+  margin-top: 7%;
+}
 .discount-div {
   margin-left: 10px;
-  padding: 1%;
+  font-size: smaller;
+  padding: 1% 2%;
+  color: #f58840;
   border-radius: 10px;
   text-align: center;
-  background-color: orange;
+  background-color: #fef1e6;
 }
 .counter-btn {
   -webkit-border-radius: 11;
@@ -17,24 +22,29 @@
   text-decoration: none;
 }
 .addtocart-btn {
-  -webkit-border-radius: 11;
-  -moz-border-radius: 11;
-  border-radius: 11px;
-  font-family: Arial;
-  color: white;
-  font-size: 20px;
+  -webkit-border-radius: 10;
+  -moz-border-radius: 10;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 10px 21px #f58840;
+  -moz-box-shadow: 0px 10px 21px #f58840;
+  box-shadow: 0px 10px 21px #f58840;
+  color: #ffffff;
+  font-size: 15px;
   background: #f58840;
-  padding: 5px 30px 5px 30px;
+  padding: 10px 40px 10px 40px;
+  text-decoration: none;
+}
+.addtocart-btn:hover {
+  background: #ffab4c;
   text-decoration: none;
 }
 
 .thumbnailimg {
-  width: 80px;
-  height: 80px;
+  width: 50px;
+  height: 50px;
   border-radius: 10%;
 }
 .modal-img {
-  width: 300px;
   height: 300px;
-  border-radius: 15%;
+  border-radius: 7%;
 }
