--- a/src/css/items.css
+++ b/src/css/items.css
@@ -8,6 +8,28 @@
 .content-div-res {
   margin: 5% 3%;
 }
+.arrow-btn-container {
+  position: relative;
+}
+.arrow-btn-previous {
+  background: #f7f7f7;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 5%;
+}
+.arrow-btn-next {
+  background: #f7f7f7;
+  padding: 1px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  right: 5%;
+}
 .discount-div {
   margin-left: 5px;
   font-size: small;
@@ -59,7 +81,7 @@
   text-decoration: none;
 }
 .addtocart-btn:hover {
-  background: #ffab4c;
+  opacity: 0.8;
   text-decoration: none;
 }
 .res-button {
@@ -72,6 +94,14 @@
   height: 50px;
   border-radius: 10%;
 }
+.thumbnailimg:hover {
+  opacity: 0.7;
+}
+.thumbnailimg-active {
+  outline: 3px solid #f58840;
+  opacity: 0.5;
+}
+
 .modal-img {
   height: 300px;
   border-radius: 7%;
