--- a/src/css/items.css
+++ b/src/css/items.css
@@ -67,6 +67,12 @@
   padding: 10px 30px 10px 30px;
   text-decoration: none;
 }
+.minus-counter:hover {
+  opacity: 0.5;
+}
+.plus-counter:hover {
+  opacity: 0.5;
+}
 .addtocart-btn {
   -webkit-border-radius: 10;
   -moz-border-radius: 10;
