--- a/src/css/cartpop.css
+++ b/src/css/cartpop.css
@@ -49,6 +49,7 @@
   border-radius: 10px;
   color: #ffffff;
   font-size: 15px;
+  padding: 10px 30px;
   background: #f58840;
   width: 90%;
   text-decoration: none;
