--- a/src/css/header.css
+++ b/src/css/header.css
@@ -72,3 +72,25 @@
 .avatar-pic:hover {
   outline: 3px solid #f58840;
 }
+.base {
+  position: relative;
+}
+.indicator {
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translate(50%, -20%);
+  width: 18px;
+  height: 15px;
+  border-radius: 50%;
+  padding: 1px;
+  display: flex;
+  background-color: #f58840;
+  justify-content: center;
+  align-items: center;
+}
+.noti_cart {
+  color: #fff;
+  font-size: small;
+  font-weight: 700;
+}
